--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 <body>
     <div class="wrapper">
         <header>
+            <div class="title">
+                <img src="/images/in-time@2x.png" alt="images">
+            </div>
             <div>
                 <nav>
                     <ul class="main-nav">
