--- a/index.html
+++ b/index.html
@@ -6,14 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>In-time</title>
     <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,500;0,700;1,300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,500;0,700;1,300&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
     <div class="wrapper">
         <header>
             <div class="title">
-                <img src="/images/in-time@2x.png" alt="images">
+                <img class="logo" src="images/in-time@2x.png" alt="images">
+                <a class="contacts" href="tel:+12348593"><img class="icon-phone" src="images/call-answer@2x.png"
+                        alt="images">+1 234 85 93</a>
             </div>
             <div>
                 <nav>
@@ -31,16 +34,17 @@
                 <ul class="breadcrumbs">
                     <li><a href="#">Главная</a></li>
                     <li><a href="#">></a></li>
-                    <li><a href="#">Следующая страница</a></li>
+                    <li>Следующая страница</li>
                 </ul>
             </div>
         </header>
-        <main>
-            <aside>
+        <main class="title-content">
+            <aside class="sidebar">
                 <div>
                     <form action="#" class="search-form">
                         <input type="search" class="form-control" placeholder="Поиск">
-                        <button class="btn-search" type="submit"></button>
+                        <button class="btn-search" type="submit"> <i class="icon-search"></i>
+                        </button>
                     </form>
                 </div>
                 <div>
@@ -59,75 +63,89 @@
                     <p>Известные часовые компании тщательно разрабатывают дизайн не только для эксклюзивных коллекций,
                         но и для моделей массового спроса.</p>
                 </div>
-                <button class="btn"></button>
+                <button class="btn-2">Перейти ко всем новостям</button>
             </aside>
-            <section class="block-1">
-                <h1>Новая коллекция ручных часов </h1>
-                <p>Катарсис раскладывает на элементы трагический дедуктивный метод, изменяя привычную реальность.
-                    Интересно отметить, что гегельянство творит естественный гедонизм, открывая новые горизонты.
-                    Созерцание заполняет данный предмет деятельности, учитывая опасность, которую представляли собой
-                    писания Дюринга для не окрепшего еще немецкого рабочего движения. Смысл жизни представляет собой
-                    гедонизм. Дедуктивный метод рассматривается мир. Сомнение ментально подчеркивает принцип восприятия.
+            <div class="content">
+                <section class="block-1">
+                    <h1>Новая коллекция ручных часов </h1>
+                    <p>Катарсис раскладывает на элементы трагический дедуктивный метод, изменяя привычную реальность.
+                        Интересно отметить, что гегельянство творит естественный гедонизм, открывая новые горизонты.
+                        Созерцание заполняет данный предмет деятельности, учитывая опасность, которую представляли собой
+                        писания Дюринга для не окрепшего еще немецкого рабочего движения. Смысл жизни представляет собой
+                        гедонизм. Дедуктивный метод рассматривается мир. Сомнение ментально подчеркивает принцип
+                        восприятия.
 
-                    Знак, конечно, непредвзято творит данный интеллект. Боль творит конфликт. Бабувизм подчеркивает
-                    из ряда вон выходящий гравитационный парадокс. Исчисление предикатов рассматривается дуализм.</p>
-                <img src="images/luke-chesser-22235-unsplash.png" alt="images-1">
-                <p>Конфликт, по определению, трансформирует естественный гравитационный парадокс, хотя в официозе
-                    принято обратное. Принцип восприятия непредвзято подрывает онтологический конфликт, однако Зигварт
-                    считал критерием истинности необходимость и общезначимость, для которых нет никакой опоры
-                    в объективном мире. Моцзы, Сюнъцзы и другие считали, что сомнение раскладывает на элементы гедонизм,
-                    изменяя привычную реальность.</p>
-            </section>
-            <section class="block-2">
-                <h2>Межпланетный маятник Фуко — актуальная национальная задача</h2>
-                <p>Ювелирная тенденция в моде на часы не исчезнет никогда. Поэтому, если в вашем гардеробе есть место
-                    элегантным вечерним и дневным платьях, дорогим деловым костюмам и мехам, то такой гардероб
-                    обязательно стоит дополнить элитной моделью модных женских часов.</p>
-                <p>Ассортимент часов:</p>
-                <ul>
-                    <li>Женские часы</li>
-                    <li>Мужские часы</li>
-                    <li>Детские часы</li>
-                    <li>Премиум класс</li>
-                </ul>
-                <p>Дип-скай объект притягивает вращательный экватор, таким образом, атмосферы этих планет плавно
-                    переходят в жидкую мантию. Очевидно, что угловое расстояние выслеживает непреложный перигей –
-                    у таких объектов рукава столь фрагментарны и обрывочны, что их уже нельзя назвать спиральными. </p>
-            </section>
-            <section class="block-3">
-                <h3>Стремление к хронометрический точности</h3>
-                <p>Спустя четыре года обсерватория в Кью (Великобритания) присвоила наручным часам Rolex класс точности
-                    «A», который прежде оставался прерогативой морских хронометров. С того самого времени наручные часы
-                    Rolex неизменно ассоциируются с точностью.</p>
-                <img src="images/osz-8-g-70.png" alt="images-2">
-                <p>В наступившем 2019 году актуальны будут различные вариации женских наручных часов:</p>
-                <ol>
-                    <li>Классические;</li>
-                    <li>Спортивные;</li>
-                    <li>Романтические;</li>
-                    <li>Часы в стилистике хайтека и минимализма.</li>
-                </ol>
-                <hr>
-            </section>
-            <section class="block-4">
-                <h3>Ваш комментарий</h3>
-                <div class="form-group">
-                    <input class="form-control" type="text" name="name" placeholder="Имя">
-                </div>
-                <div class="form-group">
-                    <input class="form-control" type="email" name="E-mail" placeholder="E-mail">
-                </div>
-                <div class="form-group">
-                    <textarea class="form-control textarea" placeholder="Текст сообщения"></textarea>
-                </div>
-                <label class="check-label">
-                    <input type="checkbox">
-                    Подписатся на наши новости
-                </label>
-                <button class="btn" type="submit">Отправить комментарий</button>
-            </section>
+                        Знак, конечно, непредвзято творит данный интеллект. Боль творит конфликт. Бабувизм подчеркивает
+                        из ряда вон выходящий гравитационный парадокс. Исчисление предикатов рассматривается дуализм.
+                    </p>
+                    <img src="images/luke-chesser-22235-unsplash.png" alt="images-1">
+                    <p>Конфликт, по определению, трансформирует естественный гравитационный парадокс, хотя в официозе
+                        принято обратное. Принцип восприятия непредвзято подрывает <a href="#"><i>онтологический конфликт</i></a>, однако
+                        Зигварт
+                        считал критерием истинности необходимость и общезначимость, для которых нет никакой опоры
+                        в объективном мире. Моцзы, Сюнъцзы и другие считали, что сомнение раскладывает на элементы
+                        гедонизм,
+                        изменяя привычную реальность.</p>
+                </section>
+                <section class="block-2">
+                    <h2>Межпланетный маятник Фуко — актуальная национальная задача</h2>
+                    <p>Ювелирная тенденция в моде на часы не исчезнет никогда. Поэтому, если в вашем гардеробе есть
+                        место
+                        элегантным вечерним и дневным платьях, дорогим деловым костюмам и мехам, то такой гардероб
+                        обязательно стоит дополнить элитной моделью модных женских часов.</p>
+                    <p>Ассортимент часов:</p>
+                    <ul>
+                        <li><a href="#"><i>Женские часы</i></a></li>
+                        <li><a href="#"><i>Мужские часы</i></a></li>
+                        <li><a href="#"><i>Детские часы</i></a></li>
+                        <li><a href="#"><i>Премиум класс</i></a></li>
+                    </ul>
+                    <p>Дип-скай объект притягивает вращательный экватор, таким образом, атмосферы этих планет плавно
+                        переходят в жидкую мантию. Очевидно, что угловое расстояние выслеживает непреложный перигей –
+                        у таких объектов рукава столь фрагментарны и обрывочны, что их уже нельзя назвать спиральными.
+                    </p>
+                </section>
+                <section class="block-3">
+                    <h3>Стремление к хронометрический точности</h3>
+                    <p>Спустя четыре года обсерватория в Кью (Великобритания) присвоила наручным часам Rolex класс
+                        точности
+                        «A», который прежде оставался прерогативой морских хронометров. С того самого времени наручные
+                        часы
+                        Rolex неизменно ассоциируются с точностью.</p>
+                    <img src="images/pbclxo-0.png" alt="images-2">
+                    <p>В наступившем 2019 году актуальны будут различные вариации женских наручных часов:</p>
+                    <ol>
+                        <li>Классические;</li>
+                        <li>Спортивные;</li>
+                        <li>Романтические;</li>
+                        <li>Часы в стилистике хайтека и минимализма.</li>
+                    </ol>
+                    <hr>
+                </section>
+                <section class="block-4">
+                    <h3>Ваш комментарий</h3>
+                    <div class="form-group">
+                        <input class="form-control" type="text" name="name" placeholder="Имя">
+                    </div>
+                    <div class="form-group">
+                        <input class="form-control" type="email" name="E-mail" placeholder="E-mail">
+                    </div>
+                    <div class="form-group">
+                        <textarea class="form-control textarea" placeholder="Текст сообщения"></textarea>
+                    </div>
+                    <button class="btn" type="submit">Отправить комментарий</button>
+                </section>
+            </div>
         </main>
-        <footer></footer>
+        <footer class="footer">
+            <ul class="social-networks">
+                <li><a href="https://dribbble.com/"><i class="icon-dribbble"></i></a></li>
+                <li><a href="https://www.instagram.com/?hl=ru"><i class="icon-instagram"></i></a></li>
+                <li><a href="https://www.facebook.com/"><i class="icon-facebook"></i></a></li>
+                <li><a href="https://www.linkedin.com/"><i class="icon-linkedin"></i></a></li>
+            </ul>
+            <div>©InTime, 2019 Все права защищены</div>
+        </footer>
     </div>
 </body>
 
